discord-liked-UI/k8s/frontend-service.yaml
# k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ui-service
spec:
  type: ClusterIP
  selector:
    app: frontend-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
